@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Improvements to Users grid to dim inactive users
 - Fixed a few bugs with MODx.Browser and file tree
 - [#MODX-2127] Added message to Package Management if cURL or Sockets is not installed that prompts user to do so
 - Added ability to send warning/error messages to all MODx.* grids/trees
